@@ -275,6 +275,9 @@ Output GC statistics at program exit, in the same format as Gc.print_stat.
 .BR 0x800
 GC debugging messages.
 
+.BR 0x1000
+Address space reservation changes.
+
 .TP
 .BR w \ (window_size)
 Set size of the window used by major GC for smoothing out variations in
